2010-11-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use --max-connection-per-server option value for Metalink.
	* src/Metalink2RequestGroup.cc

2010-11-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error on opensolaris
	* src/util.cc

2010-11-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't catch Exception.
	* src/RealtimeCommand.cc

2010-11-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed unused includes.

2010-11-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added .cc file for classes/structs that only provided by header
	file. Defined non-POD classes' ctor, dtor in .cc file.  Moved
	implementation code in header file to .cc file for major
	classes/strucsts.

2010-11-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed SharedHandle::isNull(). Instead we added operator* and
	operator unspecified_bool_type. Removed use of WeakHandle and
	replaced with raw pointer.

2010-11-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed memory leak
	* src/ExpatMetalinkProcessor.cc

2010-11-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	To match the behavior of friend operator functions in
	SharedHandle.h to std::tr1::shared_ptr, we intentionally broke
	these functions and modified code so that our code does not depend
	on old behavior.
	* src/AbstractCommand.cc
	* src/DHTAbstractNodeLookupTask.h
	* src/DHTBucket.cc
	* src/DHTMessageReceiver.cc
	* src/DHTNodeLookupEntry.cc
	* src/DHTRoutingTable.cc
	* src/DefaultBtRequestFactory.cc
	* src/DefaultPeerStorage.cc
	* src/DefaultPieceStorage.cc
	* src/DownloadContext.cc
	* src/EpollEventPoll.cc
	* src/Event.h
	* src/HttpConnection.cc
	* src/KqueueEventPoll.cc
	* src/MultiDiskAdaptor.cc
	* src/PeerAbstractCommand.cc
	* src/PieceStatMan.cc
	* src/PollEventPoll.cc
	* src/PortEventPoll.cc
	* src/SegmentMan.cc
	* src/SelectEventPoll.cc
	* src/SelectEventPoll.h
	* src/ServerStatMan.cc